--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,16 @@
     background-color: green !important; 
     font-size: large;
 }
+
+.fade-transition {
+    transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out, height 0.5s ease-in-out;
+    transform: translateZ(0);
+}
+
+.fade-transition.entering,
+.fade-transition.exiting,
+.fade-transition.exited {
+    opacity: 0;
+    transform: translateY(-10px);
+    height: 0;
+}
