--- a/src/pages/ll/Node.module.css
+++ b/src/pages/ll/Node.module.css
@@ -1,16 +1,22 @@
 .node_container {
   display: flex;
   align-items: center;
-  margin-right: 4px;
+  margin-right: 2rem;
+  scale: 1.3;
 }
 
 .node {
+  margin-top: 15px;
   display: grid;
-  background-color: #fff;
+  background-color: #e27171;
   color: #000;
   border-radius: 2.5px;
   font-size: 1.2rem;
   overflow: hidden;
+}
+
+.node:hover{
+  scale: 1.2;
 }
 
 .node:has(.spacer) {
@@ -18,7 +24,7 @@
 }
 
 .node:last-child {
-  background-color: #18a72b;
+  background-color: #df6d21;
 }
 
 .node span {
@@ -35,6 +41,7 @@
   height: 3px;
   position: relative;
   background-color: #b2aaaa;
+  scale: 1.3;
 }
 
 .arrow::after {
