Implemented list ADT : Stack and Queue visualizations

--- a/src/pages/list-adt/stack.module.css
+++ b/src/pages/list-adt/stack.module.css
@@ -1,6 +1,7 @@
-.linkedList {
+.stack {
   height: 100%;
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
   align-self: center;
