--- a/src/pages/bst/internals/TreeTraversalVisualizer.css
+++ b/src/pages/bst/internals/TreeTraversalVisualizer.css
@@ -4,7 +4,7 @@
     width: 55px;
     border-radius: 50%;
     background-color: bisque;
-    border: white;
+    border: 0.5px solid rgb(85, 85, 85);
 }
 
 .form-range.slider-red::-webkit-slider-thumb {
@@ -75,11 +75,7 @@ input {
     font-family: arial, verdana, tahoma;
     font-size: 18px;
     display: inline-block;
-    
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    
+
     transition: all 0.5s;
     -webkit-transition: all 0.5s;
     -moz-transition: all 0.5s;
