--- a/src/pages/dijkstra/canvas.css
+++ b/src/pages/dijkstra/canvas.css
@@ -5,9 +5,13 @@
     margin-right: 30px;
 }
 
+.starting-node{
+    fill: rgb(145, 105, 53);
+}
+
 .canvas {
     width: 100%;
-    height: 32rem;
+    height: 35rem;
     box-shadow: 0 0 10px rgba(70, 70, 70, 0.4);
     border-radius: 9px;
   }
