--- a/src/pages/dijkstra/canvas.css
+++ b/src/pages/dijkstra/canvas.css
@@ -9,6 +9,9 @@
     fill: rgb(145, 105, 53);
 }
 
+.rowss{
+    background-color: rgb(115, 115, 115);
+}
 .canvas {
     width: 100%;
     height: 35rem;
