--- a/src/pages/path/canvas.css
+++ b/src/pages/path/canvas.css
@@ -5,6 +5,21 @@
     margin-right: 30px;
 }
 
+.legend-button{
+  transition: all ease-in-out 0.1s;
+}
+
+.legend-button:hover{
+  transform: scale(1.3);
+}
+
+.undo-button{
+  transition: all ease-in-out 0.1s;
+}
+.undo-button:hover{
+  transform: scale(1.3);
+}
+
 .starting-node{
     fill: rgb(145, 105, 53);
 }
@@ -25,13 +40,18 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
-
-    border: black solid 2px;
+    border: black solid 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: move;
 }
+
+.DraggableNode:hover{
+  transform: scale(1.1);
+}
+
+
 
 .DraggableNode span {
     color: black;
