--- a/src/pages/list-adt/queue.module.css
+++ b/src/pages/list-adt/queue.module.css
@@ -1,10 +1,16 @@
 .queue {
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    align-self: center;
-    justify-content: center;
-  }
+  margin-top: 3rem;
+  width: fit-content;
+  padding: 3px;
+  border: 2px solid black;
+  border-right: none;
+  border-left: none;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  align-self: center;
+  justify-content: center;
+}
   
