--- a/src/pages/list-adt/stack.module.css
+++ b/src/pages/list-adt/stack.module.css
@@ -1,4 +1,9 @@
 .stack {
+  margin-top: 3rem;
+  width: fit-content;
+  padding: 3px;
+  border: 2px solid black;
+  border-top: none;
   height: 100%;
   display: flex;
   flex-direction: column;
