Fixed browser routes for gh-pages + Navigation bar update

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
     color: rgb(255, 255, 255) !important;
     background-color: green !important; 
     font-size: large;
+    text-align: center;
 }
 
 .fade-transition {
